fixed word-wrap on article page & modified :body field to accept strings > 255 chars

--- a/assets/css/article.css
+++ b/assets/css/article.css
@@ -24,4 +24,5 @@
 
 .article-content {
     padding-bottom: 50px;
+    word-wrap: break-word;
 }
